Fix a > code links being hidden behind the code padding

--- a/source/style/less/slider89/index.less
+++ b/source/style/less/slider89/index.less
@@ -654,10 +654,13 @@ main .version_notice code {
       }
       .body {
         margin: .5em .5em 0;
-        ul {
-          margin: 0;
-          padding-left: 1.5em;
-        }
+      }
+      ul {
+        margin: 0;
+        padding-left: 1.5em;
+      }
+      a code {
+        padding-bottom: 1px;
       }
     }
     code, .codeblock {
